Задание l041 тест gc.